# Copyright (c) Huawei Technologies Co., Ltd. 2022. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//developtools/profiler/hidebug/hidebug.gni")

ohos_shared_library("hidebug") {
  include_dirs = [
    "util",
    "$hidebug_path/frameworks/native/include",
    "$hidebug_path/interfaces/native/kits/include",
  ]

  sources = [
    "napi_hidebug.cpp",
    "napi_hidebug_dump.cpp",
    "napi_hidebug_vm.cpp",
    "napi_hidebug_init.cpp",
    "util/napi_util.cpp",
  ]

  deps = [ "$hidebug_path/frameworks/native:hidebug_native" ]

  external_deps = [
    "ability_runtime:app_context",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hiview:libfaultlogger",
    "init:libbegetutil",
    "ipc:ipc_core",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  relative_install_dir = "module"

  part_name = "hiprofiler"
  subsystem_name = "developtools"
}
