# Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/test.gni")
import("../../../../../base/config.gni")

##############################fuzztest##########################################
ohos_fuzztest("PluginCreateSessionCmdFuzzTest") {
  module_out_path = hiprofiler_fuzz_output_path
  fuzz_config_file = "${OHOS_PROFILER_DIR}/device/plugins/api/test/fuzztest/plugincreatesessioncmd_fuzzer"
  include_dirs = []
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "plugincreatesessioncmd_fuzzer.cpp" ]
  deps = [
    #"${OHOS_PROFILER_DIR}/device/services/plugin_service:hiprofiler_plugin_service",
    #"${OHOS_PROFILER_DIR}/device/services/profiler_service:profiler_service",
    "../../..:plugins_sources",
  ]
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "hilog:libhilog_base",
    "protobuf:protobuf_lite",
  ]
  if (is_asan) {
    defines = [ "ASAN_MODE" ]
  }
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":PluginCreateSessionCmdFuzzTest",
  ]
}
###############################################################################
